--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-rate-limit": "^5.0.0",
     "@types/morgan": "^1.9.1",
     "@types/redis": "^2.8.25",
     "@types/serve-favicon": "^2.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "mongoose": "^5.9.26",
     "morgan": "^1.10.0",
     "redis": "^3.0.2",
