--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "kouko",
   "version": "1.0.0",
   "description": "An HTTP Bittorrent tracker",
-  "main": "index.js",
+  "main": "build/app.js",
   "scripts": {
     "start": "node build/app.js",
     "dev": "nodemon",
     "build": "tsc -p ."
   },
-  "author": "",
+  "author": "Raghu Saxena",
   "license": "ISC",
   "dependencies": {
     "@types/express-rate-limit": "^5.0.0",
@@ -18,14 +18,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
-    "mongoose": "^5.9.26",
+    "ioredis": "^4.24.4",
     "morgan": "^1.10.0",
-    "redis": "^3.0.2",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
-    "@types/mongoose": "^5.7.34",
+    "@types/ioredis": "^4.22.1",
     "@types/node": "^14.0.27",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
