--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
-    "typescript": "^3.9.7"
+    "typescript": "~4.3.5"
   }
 }
