--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "express-rate-limit": "^5.1.3",
     "ioredis": "^5.0.3",
     "morgan": "^1.10.0",
+    "pg": "^8.11.3",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^14.0.27",
+    "@types/pg": "^8.10.9",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
