--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^14.0.27",
+    "@types/node": "^20.17.7",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
-    "typescript": "~4.5.5"
+    "typescript": "^5.7.2"
   }
 }
